# tiderace

./: .gitignore  .tiderace.db  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  mkdocs.yml
.claude/agents/: architect-agent.md  ask-agent.md  backend-agent.md  code-agent.md  compliance-agent.md  data-agent.md  debug-agent.md  devops-agent.md  document-agent.md  enforcement-agent.md  explain-agent.md  frontend-agent.md  incident-agent.md  migration-agent.md  mlai-agent.md  observability-agent.md  orchestrator-agent.md  performance-agent.md  plan-agent.md  product-agent.md  refactor-agent.md  review-agent.md  security-agent.md  test-agent.md
.claude/subagents/: accessibility.md  alerting.md  api-design.md  aws.md  benchmarking.md  boilerplate.md  bottleneck-analysis.md  caching.md  code.md  compliance-auditor.md  dashboards.md  data-model.md  data-preparation.md  decision-log.md  dependency-upgrade.md  deployment.md  devops.md  docker.md  docs.md  feature.md  gdpr.md  gitops.md  governance.md  house-style.md  kubernetes.md  log-analysis.md  logging.md  maintenance.md  meta.md  metrics-analytics-lead.md  metrics.md  microservices.md  migration.md  ml-ethics-reviewer.md  ml-evaluation-expert.md  mlops-engineer.md  mobile.md  model-training-specialist.md  model-training.md  monitoring.md  (+33 more)
.claude/workflows/: code.md  feature.md  refactor.md  review.md  testing.md
.github/workflows/: ci.yml  docs.yml  release.yml  wheels.yml
.prompticorn/: .prompticorn.yaml
benchmarks/: README.md  RESULTS-3way.md  RESULTS-freethread.md  RESULTS-inproc.md  RESULTS-native.md  bench_3way.sh  freethread_spike.py  real_world.sh  run_benchmarks.py
benchmarks/.hyperfine/: pytest_cold.json  pytest_cold.md  pytest_testmon_cold.json  (+13 more)
conformance/: CONFORMANCE.md  conformance.py  manifest.tsv  runthrough.py  setup.sh
docs/: index.md
engine/: Cargo.toml
engine/crates/engine-cli/: Cargo.toml
engine/crates/engine-cli/src/: main.rs
engine/crates/engine-core/: Cargo.toml
engine/crates/engine-core/src/: error.rs  lib.rs  shim_locate.rs  testing.rs
engine/crates/engine-core/src/cache/: cache.rs  cache_key.rs  cached_outcome.rs  dir_cache.rs  local_cache.rs  mod.rs  null_cache.rs  purity.rs  tiered_cache.rs
engine/crates/engine-core/src/collection/: collector.rs  mod.rs  regex_collector.rs
engine/crates/engine-core/src/coverage/: coverage_report.rs  dep_graph.rs  file_lines.rs  mod.rs
engine/crates/engine-core/src/domain/: mod.rs  node_id.rs  outcome.rs  run_report.rs  scope.rs  scope_path.rs  test_item.rs  test_result.rs  test_style.rs
engine/crates/engine-core/src/exec/: fork_permit.rs  fork_plan.rs  fork_worker.rs  memory_governor.rs  mod.rs  shim_protocol.rs  subinterp_worker.rs  subprocess_worker.rs  transport.rs  watermark.rs  watermark_stack.rs  wellspring.rs  worker.rs  worker_caps.rs
engine/crates/engine-core/src/fixtures/: closure_hash.rs  finalizer.rs  fixture.rs  fixture_args.rs  fixture_closure.rs  fixture_error.rs  fixture_graph.rs  fixture_instance.rs  fixture_plan.rs  fixture_resolver.rs  layered_resolver.rs  mod.rs  override_table.rs  param_value.rs  scope_layer.rs  shim_handle.rs
engine/crates/engine-core/src/hooks/: hook.rs  hook_event.rs  hook_host.rs  mod.rs  priority.rs
engine/crates/engine-core/src/impact/: change.rs  impact_analyzer.rs  mod.rs  selection.rs
engine/crates/engine-core/src/reporter/: github_reporter.rs  json_reporter.rs  junit_xml_reporter.rs  mod.rs  reporter.rs  sarif_reporter.rs  terminal_reporter.rs
engine/crates/engine-core/src/scheduler/: locality_scheduler.rs  mod.rs  round_robin_scheduler.rs  scheduled_test.rs  scheduler.rs  worker_batch.rs
engine/crates/engine-core/tests/: cache_impact_integration.rs  differential.rs  fixtures_acceptance.rs  nofork_acceptance.rs  subinterp_acceptance.rs
engine/crates/engine-core/tests/fx_support/: mod.rs
engine/crates/engine-daemon/: Cargo.toml
engine/crates/engine-daemon/src/: engine_handler.rs  fs_watcher.rs  invalidator.rs  lib.rs  main.rs  persist.rs  pool.rs  probe.rs  rpc_method.rs  rpc_server.rs  session.rs  socket.rs  watch.rs
engine/crates/engine-daemon/tests/: daemon_e2e.rs
engine/crates/engine-inproc/: Cargo.toml
engine/crates/engine-inproc/src/: lib.rs  main.rs
engine/crates/tiderace-dist/: Cargo.toml  README.md  pyproject.toml
engine/py-riptide/: MIGRATION.md  migrate_example_pytest.py  proof_b2_uses.py  proof_b3_inference.py  proof_b5_async_providers.py  proof_b5_provider_params.py  proof_migrate_novalue.py  proof_n3_shim.py  proof_n5_builtins.py  proof_n6_coverage.py  proof_n7_assertions.py  proof_n8_async_unittest.py  proof_pure_batching.py  proof_purity_guard.py  proof_snapshot_restore.py  proof_static_purity.py  proof_subinterp_worker.py  proof_trusted_pure.py  proof_type_di.py  proof_windows_opaque_fork.py
engine/py-riptide/riptide/: __init__.py  _errors.py  _resolve.py  _spec.py  migrate.py
engine/py-riptide/riptide/builtins/: __init__.py  _capture.py  _monkeypatch.py  _paths.py
engine/py-shim/: shim.py
engine/py-tiderace/: MIGRATION.md  migrate_example_pytest.py  proof_b2_uses.py  proof_b3_inference.py  proof_b5_async_providers.py  proof_b5_provider_params.py  proof_migrate_novalue.py  proof_n3_shim.py  proof_n5_builtins.py  proof_n7_assertions.py  proof_purity_guard.py  proof_subinterp_probe.py  proof_subinterp_worker.py  proof_type_di.py  proof_windows_opaque_fork.py
engine/py-tiderace/tiderace/: __init__.py  _errors.py  _resolve.py  _spec.py  migrate.py
engine/py-tiderace/tiderace/_shim/: __init__.py
engine/py-tiderace/tiderace/builtins/: __init__.py  _capture.py  _monkeypatch.py  _paths.py
overrides/: home.html
planning/: README.md
riptide/: collector.rs  config.rs  hasher.rs  main.rs  pool.rs  procutil.rs  reporter.rs  runner.rs  watcher.rs  worker.py
scripts/: build-wheel.sh
spike/: Cargo.toml  run_spike.sh  shim.py
spike-inproc/: Cargo.toml  RESULTS.md
spike-inproc/src/: main.rs
tests/: cli.rs
tiderace/: collector.rs  config.rs  db.rs  impact.rs  main.rs  pool.rs  reporter.rs  runner.rs  watcher.rs  worker.py
(+108 files in other folders)
