[package]
name = "riptide"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[[bin]]
name = "riptide"
path = "riptide/main.rs"

[dependencies]
clap = { version = "=4.4.18", features = ["derive"] }
rayon = "=1.8.1"
rusqlite = { version = "=0.31.0", features = ["bundled"] }
sha2 = "=0.10.8"
hex = "=0.4.3"
serde = { version = "=1.0.197", features = ["derive"] }
serde_json = "=1.0.114"
colored = "=2.1.0"
indicatif = "=0.17.8"
anyhow = "=1.0.80"
glob = "=0.3.1"
regex = "=1.10.3"
walkdir = "=2.5.0"
chrono = { version = "=0.4.35", features = ["serde"] }
wait-timeout = "=0.2.0"
toml = "=0.5.11"

[dev-dependencies]
assert_cmd = "=2.0.14"
predicates = "=3.1.0"
tempfile = "=3.10.1"
