# Throwaway go/no-go spike for ADR-E011 ② (in-process / FFI execution backend).
# Standalone workspace so it is NEVER absorbed by the repo-root crate (mirrors ../spike).
# Build/run against a CPython that ships libpython + headers (a uv standalone or a venv on one):
#   PYO3_PYTHON=/tmp/inproc-spike-venv/bin/python cargo run
[package]
name = "inproc-spike"
version = "0.0.0"
edition = "2021"
publish = false

[workspace]

[[bin]]
name = "inproc-spike"
path = "src/main.rs"

[dependencies]
# `auto-initialize` = embed + boot libpython on first `with_gil` (NOT extension-module mode).
pyo3 = { version = "0.23", features = ["auto-initialize"] }

[profile.release]
opt-level = 0
