[package]
name = "engine-daemon"
edition.workspace = true
version.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "riptide-daemon"
path = "src/main.rs"

[dependencies]
engine-core = { path = "../engine-core" }
serde = { workspace = true }
serde_json = { workspace = true }
notify = { workspace = true }
